# whispree

./: .gitignore  .swiftformat  .swiftlint.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  DESIGN.md  LICENSE  PLAN.md  README.ko.md  README.md  RELEASE.md  appcast.xml  cliff.toml  project.yml  release-notes.html
.github/scripts/: md-to-html.py
.github/workflows/: release.yml  update-release-notes.yml
Casks/: whispree.rb
FreeWhisper.xcodeproj/: project.pbxproj
FreeWhisper/App/: AppDelegate.swift  AppState.swift  Constants.swift  FreeWhisperApp.swift
FreeWhisper/Coordinators/: RecordingCoordinator.swift
FreeWhisper/Models/: AppSettings.swift
FreeWhisper/Resources/: Info.plist
FreeWhisperTests/Services/: AudioServiceTests.swift
NotMyWhisper/: AGENTS.md
NotMyWhisper.xcodeproj/: project.pbxproj
NotMyWhisper/App/: AGENTS.md  AppDelegate.swift  AppState.swift  Constants.swift  NotMyWhisperApp.swift
NotMyWhisper/Coordinators/: AGENTS.md  RecordingCoordinator.swift
NotMyWhisper/Models/: AGENTS.md  AppSettings.swift  DomainWordSets.swift  ModelInfo.swift  OpenAIModels.swift  TranscriptionState.swift
NotMyWhisper/Resources/: Info.plist
NotMyWhisper/Views/: UnifiedView.swift
NotMyWhisperTests/: AGENTS.md
Whispree/: AGENTS.md
Whispree.xcodeproj/: project.pbxproj
Whispree/App/: AGENTS.md  (+4 more)
WhispreeTests/: AGENTS.md
docs/: mac_local_stt_pipeline_ko.md
docs-site/: CONTRIBUTING.md  DESIGN.md  README.md  astro.config.mjs  package.json  pnpm-lock.yaml  vercel.json
mlx-worker/: mlx_llm_worker.py  mlx_worker.py  pyproject.toml
releases/: appcast.xml
stt-engine/: AGENTS.md  pyproject.toml  server.py
stt-engine/src/: whisper_engine.py
(+179 files in other folders)
