[project]
name = "notmywhisper-stt-engine"
version = "0.1.0"
description = "Lightning Whisper MLX STT server for NotMyWhisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "numpy>=2.0.0",
    "lightning-whisper-mlx>=0.0.10",
]

[tool.uv]
dev-dependencies = []
